# QSettingsContainer

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  api.html  build.py  conanfile.py  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
.github/workflows/: main.yml
_sources/: api.rst  index.rst  index.rst.txt  usage.rst.txt
cmake/: QSettingsContainer-config.cmake.in
doc/: .gitignore  CMakeLists.txt  api.rst  conf.py  index.rst  usage.rst
include/: QSettingsContainer.h
include/dragoonboots/qsettingscontainer/: QSettingsContainer.h
include/qsettingscontainer/: QSettingsContainer.h
src/: CMakeLists.txt
